package TicTacToe.Version1;

public class Symbol {
    private final String value;

    public Symbol(String value) {
        this.value = value;
    }

    public String getValue() {
        return value;
    }
}
